# qiskit-runtime-server

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  IMPLEMENTATION_STATUS.md  LICENSE  README.md  app.example.py  investigate_statevector.py  pyproject.toml
.github/workflows/: ci.yml
docs/: API_SPECIFICATION.md  ARCHITECTURE.md  BACKEND_EXECUTOR_CONFIG.md  DESIGN_DECISIONS.md  DEVELOPMENT.md  STATEVECTOR_BACKEND_SPEC.md
examples/: local_service_helper.py
src/qiskit_runtime_server/: __init__.py  app.py  models.py
src/qiskit_runtime_server/executors/: __init__.py  aer.py  base.py  custatevec.py
src/qiskit_runtime_server/managers/: __init__.py  job_manager.py  session_manager.py
src/qiskit_runtime_server/providers/: __init__.py  backend_metadata.py
tests/: __init__.py  conftest.py
tests/integration/: test_client_server.py  test_session_integration.py
tests/server/: __init__.py  test_app.py  test_backend_metadata.py  test_executors.py  test_job_manager.py  test_models.py  test_placeholder.py  test_sessions.py
